[workspace]
members = ["contracts/*", "packages/*"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", features = [
  "cosmwasm_1_2",
  # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
  # "cosmwasm_1_4",
] }
cw-storage-plus = "1.1.0"
cw-utils = "1.0.2"
cw2 = "1.1.1"
kujira = "0.8.3"
kujira-rs-testing = "1.4.0"
kujira-ghost = "0.8.0"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
cw-multi-test = "0.18"
unstake = { path = "./packages/unstake" }
