[workspace]
members = ["contracts/*", "packages/*"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "2.0.3"
cosmwasm-std = { version = "2.0.3", features = [
  "cosmwasm_1_2",
  # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
  # "cosmwasm_1_4",
] }
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw2 = "2.0.0"
kujira = "1.1.0"
kujira-rs-testing = "1.6.0"
kujira-ghost = "1.1.0"
schemars = "0.8.19"
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.61" }
cw-multi-test = "2.0.1"
unstake = { path = "./packages/unstake" }
monetary = { path = "../../../entropic/monetary/crates/monetary" }